Sustitución de hilos y url, por código más actualizado y pregarga de búsquedas más populares